# pdfer

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: build-release.yml
src/: main.rs
